--- a/english-dictionary/css/style.css
+++ b/english-dictionary/css/style.css
@@ -1,1 +1,53 @@
-@import 'normalize.css'
+@import 'normalize.css';
+html {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+
+  font-size: 3rem;
+}
+
+#content__word {
+}
+#content__transcription {
+}
+#content__translation {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 2rem;
+}
+.control {
+  position: absolute;
+  height: 100%;
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 5;
+  background-color: #00000010;
+  box-shadow: 0 0 10px #0000000c;
+}
+.control__left img,
+.control__rigth img {
+  width: 100%;
+  height: 150px;
+}
+.control__left {
+  left: 0;
+}
+.control__rigth {
+  right: 0;
+}
